--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "styled-components": "^5.0.1",
+    "styled-reset": "^4.1.2",
     "webpack-dev-server": "^3.10.3"
   }
 }
