--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react_ujs": "^2.6.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typeface-rye": "^0.0.72"
   },
   "version": "0.1.0",
   "devDependencies": {
